ministrosdefe-dev/endpoints.yaml
apiVersion: v1
items:
- apiVersion: v1
  kind: Endpoints
  metadata:
    creationTimestamp: "2023-05-18T20:57:09Z"
    labels:
      app: api-integracion
      migration.openshift.io/migrated-by-migmigration: bf3b53a0-3a30-4f32-905a-b3647ad7c520
      migration.openshift.io/migrated-by-migplan: f912fe17-8056-491d-8703-6b82312d78ec
      velero.io/backup-name: migration-d9b4c-initial-qhlk8
      velero.io/restore-name: migration-d9b4c-final-gc9lr
    name: api-integracion
    namespace: ministrosdefe-dev
    resourceVersion: "6268228"
    uid: f2f32a97-92cf-40e8-9e19-f2738db02afd
- apiVersion: v1
  kind: Endpoints
  metadata:
    creationTimestamp: "2023-05-18T20:57:09Z"
    labels:
      app: djtrl-serv001-decl
      migration.openshift.io/migrated-by-migmigration: bf3b53a0-3a30-4f32-905a-b3647ad7c520
      migration.openshift.io/migrated-by-migplan: f912fe17-8056-491d-8703-6b82312d78ec
      velero.io/backup-name: migration-d9b4c-initial-qhlk8
      velero.io/restore-name: migration-d9b4c-final-gc9lr
    name: djtrl-serv001-decl
    namespace: ministrosdefe-dev
    resourceVersion: "6268233"
    uid: 7740091b-1597-4a9b-bccb-31988fe29673
- apiVersion: v1
  kind: Endpoints
  metadata:
    creationTimestamp: "2023-05-18T20:57:09Z"
    labels:
      app: djtrl-serv002-bff
      migration.openshift.io/migrated-by-migmigration: bf3b53a0-3a30-4f32-905a-b3647ad7c520
      migration.openshift.io/migrated-by-migplan: f912fe17-8056-491d-8703-6b82312d78ec
      velero.io/backup-name: migration-d9b4c-initial-qhlk8
      velero.io/restore-name: migration-d9b4c-final-gc9lr
    name: djtrl-serv002-bff
    namespace: ministrosdefe-dev
    resourceVersion: "6268234"
    uid: 30c68591-ed7e-4bcf-b79a-fcdb5f140cb8
- apiVersion: v1
  kind: Endpoints
  metadata:
    creationTimestamp: "2023-05-18T20:57:09Z"
    labels:
      app: front001-ministros-de-fe
      migration.openshift.io/migrated-by-migmigration: bf3b53a0-3a30-4f32-905a-b3647ad7c520
      migration.openshift.io/migrated-by-migplan: f912fe17-8056-491d-8703-6b82312d78ec
      velero.io/backup-name: migration-d9b4c-initial-qhlk8
      velero.io/restore-name: migration-d9b4c-final-gc9lr
    name: front001-ministros-de-fe
    namespace: ministrosdefe-dev
    resourceVersion: "6268235"
    uid: 2b81fc3b-559e-4296-b4a6-4a321e9964a0
- apiVersion: v1
  kind: Endpoints
  metadata:
    creationTimestamp: "2023-05-18T20:57:09Z"
    labels:
      app: proxy001-serv-externos
      migration.openshift.io/migrated-by-migmigration: bf3b53a0-3a30-4f32-905a-b3647ad7c520
      migration.openshift.io/migrated-by-migplan: f912fe17-8056-491d-8703-6b82312d78ec
      velero.io/backup-name: migration-d9b4c-initial-qhlk8
      velero.io/restore-name: migration-d9b4c-final-gc9lr
    name: proxy001-serv-externos
    namespace: ministrosdefe-dev
    resourceVersion: "6268237"
    uid: 6223a328-c0da-465d-8f8c-1e79cbfda675
kind: List
metadata:
  resourceVersion: ""
  selfLink: ""
