ministrosdefe-dev/endpointslices.discovery.k8s.io.yaml
apiVersion: v1
items:
- addressType: IPv4
  apiVersion: discovery.k8s.io/v1
  endpoints: null
  kind: EndpointSlice
  metadata:
    creationTimestamp: "2023-05-18T20:57:11Z"
    generateName: api-integracion-
    generation: 1
    labels:
      app: api-integracion
      endpointslice.kubernetes.io/managed-by: endpointslice-controller.k8s.io
      kubernetes.io/service-name: api-integracion
      migration.openshift.io/migrated-by-migmigration: bf3b53a0-3a30-4f32-905a-b3647ad7c520
      migration.openshift.io/migrated-by-migplan: f912fe17-8056-491d-8703-6b82312d78ec
      velero.io/backup-name: migration-d9b4c-initial-qhlk8
      velero.io/restore-name: migration-d9b4c-final-gc9lr
    name: api-integracion-lsnkl
    namespace: ministrosdefe-dev
    ownerReferences:
    - apiVersion: v1
      blockOwnerDeletion: true
      controller: true
      kind: Service
      name: api-integracion
      uid: 041f31e3-fd45-4aa3-8814-2f047e09c190
    resourceVersion: "476054051"
    uid: 6b9aa2ca-9ad5-48c6-bf82-9b71082f0c12
  ports: null
- addressType: IPv4
  apiVersion: discovery.k8s.io/v1
  endpoints: null
  kind: EndpointSlice
  metadata:
    creationTimestamp: "2023-05-18T20:57:11Z"
    generateName: djtrl-serv001-decl-
    generation: 1
    labels:
      app: djtrl-serv001-decl
      endpointslice.kubernetes.io/managed-by: endpointslice-controller.k8s.io
      kubernetes.io/service-name: djtrl-serv001-decl
      migration.openshift.io/migrated-by-migmigration: bf3b53a0-3a30-4f32-905a-b3647ad7c520
      migration.openshift.io/migrated-by-migplan: f912fe17-8056-491d-8703-6b82312d78ec
      velero.io/backup-name: migration-d9b4c-initial-qhlk8
      velero.io/restore-name: migration-d9b4c-final-gc9lr
    name: djtrl-serv001-decl-k7ng9
    namespace: ministrosdefe-dev
    ownerReferences:
    - apiVersion: v1
      blockOwnerDeletion: true
      controller: true
      kind: Service
      name: djtrl-serv001-decl
      uid: a764c737-dc9c-453b-be45-232ff17d8883
    resourceVersion: "476054045"
    uid: 3638b9ba-c5d2-4e92-8d79-b027c6d25ae3
  ports: null
- addressType: IPv4
  apiVersion: discovery.k8s.io/v1
  endpoints: null
  kind: EndpointSlice
  metadata:
    creationTimestamp: "2023-05-18T20:57:11Z"
    generateName: djtrl-serv002-bff-
    generation: 1
    labels:
      app: djtrl-serv002-bff
      endpointslice.kubernetes.io/managed-by: endpointslice-controller.k8s.io
      kubernetes.io/service-name: djtrl-serv002-bff
      migration.openshift.io/migrated-by-migmigration: bf3b53a0-3a30-4f32-905a-b3647ad7c520
      migration.openshift.io/migrated-by-migplan: f912fe17-8056-491d-8703-6b82312d78ec
      velero.io/backup-name: migration-d9b4c-initial-qhlk8
      velero.io/restore-name: migration-d9b4c-final-gc9lr
    name: djtrl-serv002-bff-7l8jm
    namespace: ministrosdefe-dev
    ownerReferences:
    - apiVersion: v1
      blockOwnerDeletion: true
      controller: true
      kind: Service
      name: djtrl-serv002-bff
      uid: bd00bb3d-e622-4703-be1b-830ff6c01878
    resourceVersion: "476054084"
    uid: 3a0f5249-6549-4733-ae2a-011551369de8
  ports: null
- addressType: IPv4
  apiVersion: discovery.k8s.io/v1
  endpoints: null
  kind: EndpointSlice
  metadata:
    creationTimestamp: "2023-05-18T20:57:11Z"
    generateName: front001-ministros-de-fe-
    generation: 1
    labels:
      app: front001-ministros-de-fe
      endpointslice.kubernetes.io/managed-by: endpointslice-controller.k8s.io
      kubernetes.io/service-name: front001-ministros-de-fe
      migration.openshift.io/migrated-by-migmigration: bf3b53a0-3a30-4f32-905a-b3647ad7c520
      migration.openshift.io/migrated-by-migplan: f912fe17-8056-491d-8703-6b82312d78ec
      velero.io/backup-name: migration-d9b4c-initial-qhlk8
      velero.io/restore-name: migration-d9b4c-final-gc9lr
    name: front001-ministros-de-fe-f8hrn
    namespace: ministrosdefe-dev
    ownerReferences:
    - apiVersion: v1
      blockOwnerDeletion: true
      controller: true
      kind: Service
      name: front001-ministros-de-fe
      uid: ff030919-8488-4e8f-b4dc-3352b6b1af72
    resourceVersion: "476054032"
    uid: a40302cf-8427-4abb-8790-b175d34b50a6
  ports: null
- addressType: IPv4
  apiVersion: discovery.k8s.io/v1
  endpoints: null
  kind: EndpointSlice
  metadata:
    creationTimestamp: "2023-05-18T20:57:11Z"
    generateName: proxy001-serv-externos-
    generation: 1
    labels:
      app: proxy001-serv-externos
      endpointslice.kubernetes.io/managed-by: endpointslice-controller.k8s.io
      kubernetes.io/service-name: proxy001-serv-externos
      migration.openshift.io/migrated-by-migmigration: bf3b53a0-3a30-4f32-905a-b3647ad7c520
      migration.openshift.io/migrated-by-migplan: f912fe17-8056-491d-8703-6b82312d78ec
      velero.io/backup-name: migration-d9b4c-initial-qhlk8
      velero.io/restore-name: migration-d9b4c-final-gc9lr
    name: proxy001-serv-externos-z4gbh
    namespace: ministrosdefe-dev
    ownerReferences:
    - apiVersion: v1
      blockOwnerDeletion: true
      controller: true
      kind: Service
      name: proxy001-serv-externos
      uid: 5cebf8f1-ee21-472a-a56f-ee9732d0af46
    resourceVersion: "476054059"
    uid: 85045a3b-2760-4684-91ee-830414f3b71d
  ports: null
kind: List
metadata:
  resourceVersion: ""
  selfLink: ""
