ministrosdefe-dev/routes.route.openshift.io.yaml
apiVersion: v1
items:
- apiVersion: route.openshift.io/v1
  kind: Route
  metadata:
    annotations:
      openshift.io/generated-by: OpenShiftWebConsole
    creationTimestamp: "2023-05-18T20:57:11Z"
    labels:
      app: api-integracion
      migration.openshift.io/migrated-by-migmigration: bf3b53a0-3a30-4f32-905a-b3647ad7c520
      migration.openshift.io/migrated-by-migplan: f912fe17-8056-491d-8703-6b82312d78ec
      velero.io/backup-name: migration-d9b4c-initial-qhlk8
      velero.io/restore-name: migration-d9b4c-final-gc9lr
    name: api-integracion
    namespace: ministrosdefe-dev
    resourceVersion: "6268336"
    uid: b4a1b2d5-ed36-48a8-9b3b-2461f38bfe00
  spec:
    host: api-integracion-ministros-de-fe-dev.api-cloud.dirtrab.cl
    port:
      targetPort: 8080-tcp
    to:
      kind: Service
      name: api-integracion
      weight: 100
    wildcardPolicy: None
  status:
    ingress:
    - conditions:
      - lastTransitionTime: "2023-05-18T20:57:11Z"
        status: "True"
        type: Admitted
      host: api-integracion-ministros-de-fe-dev.api-cloud.dirtrab.cl
      routerCanonicalHostname: router-default.apps.ocp4azu.dirtrab.cl
      routerName: default
      wildcardPolicy: None
- apiVersion: route.openshift.io/v1
  kind: Route
  metadata:
    annotations:
      openshift.io/generated-by: OpenShiftWebConsole
    creationTimestamp: "2023-05-18T20:57:11Z"
    labels:
      app: djtrl-serv001-decl
      migration.openshift.io/migrated-by-migmigration: bf3b53a0-3a30-4f32-905a-b3647ad7c520
      migration.openshift.io/migrated-by-migplan: f912fe17-8056-491d-8703-6b82312d78ec
      velero.io/backup-name: migration-d9b4c-initial-qhlk8
      velero.io/restore-name: migration-d9b4c-final-gc9lr
    name: djtrl-serv001-decl
    namespace: ministrosdefe-dev
    resourceVersion: "6268338"
    uid: c6455032-3a9e-42bb-84db-9ac5dfca6916
  spec:
    host: djtrl-serv001-ministros-de-fe-dev.api-cloud.dirtrab.cl
    port:
      targetPort: 8080-tcp
    to:
      kind: Service
      name: djtrl-serv001-decl
      weight: 100
    wildcardPolicy: None
  status:
    ingress:
    - conditions:
      - lastTransitionTime: "2023-05-18T20:57:11Z"
        status: "True"
        type: Admitted
      host: djtrl-serv001-ministros-de-fe-dev.api-cloud.dirtrab.cl
      routerCanonicalHostname: router-default.apps.ocp4azu.dirtrab.cl
      routerName: default
      wildcardPolicy: None
- apiVersion: route.openshift.io/v1
  kind: Route
  metadata:
    annotations:
      openshift.io/generated-by: OpenShiftWebConsole
    creationTimestamp: "2023-05-18T20:57:11Z"
    labels:
      app: djtrl-serv002-bff
      migration.openshift.io/migrated-by-migmigration: bf3b53a0-3a30-4f32-905a-b3647ad7c520
      migration.openshift.io/migrated-by-migplan: f912fe17-8056-491d-8703-6b82312d78ec
      velero.io/backup-name: migration-d9b4c-initial-qhlk8
      velero.io/restore-name: migration-d9b4c-final-gc9lr
    name: djtrl-serv002-bff
    namespace: ministrosdefe-dev
    resourceVersion: "6268340"
    uid: dd36fe52-6bf2-4ac7-97f0-a1480e2351ae
  spec:
    host: djtrl-serv002-ministros-de-fe-dev.api-cloud.dirtrab.cl
    port:
      targetPort: 8080-tcp
    to:
      kind: Service
      name: djtrl-serv002-bff
      weight: 100
    wildcardPolicy: None
  status:
    ingress:
    - conditions:
      - lastTransitionTime: "2023-05-18T20:57:11Z"
        status: "True"
        type: Admitted
      host: djtrl-serv002-ministros-de-fe-dev.api-cloud.dirtrab.cl
      routerCanonicalHostname: router-default.apps.ocp4azu.dirtrab.cl
      routerName: default
      wildcardPolicy: None
- apiVersion: route.openshift.io/v1
  kind: Route
  metadata:
    annotations:
      openshift.io/generated-by: OpenShiftWebConsole
    creationTimestamp: "2023-05-18T20:57:11Z"
    labels:
      app: front001-ministros-de-fe
      migration.openshift.io/migrated-by-migmigration: bf3b53a0-3a30-4f32-905a-b3647ad7c520
      migration.openshift.io/migrated-by-migplan: f912fe17-8056-491d-8703-6b82312d78ec
      velero.io/backup-name: migration-d9b4c-initial-qhlk8
      velero.io/restore-name: migration-d9b4c-final-gc9lr
    name: front001-ministros-de-fe
    namespace: ministrosdefe-dev
    resourceVersion: "6268343"
    uid: 24d7fbf0-2d11-4f10-b344-0ec6da4ae675
  spec:
    host: front001-ministros-de-fe-dev.api-cloud.dirtrab.cl
    port:
      targetPort: 8080-tcp
    to:
      kind: Service
      name: front001-ministros-de-fe
      weight: 100
    wildcardPolicy: None
  status:
    ingress:
    - conditions:
      - lastTransitionTime: "2023-05-18T20:57:11Z"
        status: "True"
        type: Admitted
      host: front001-ministros-de-fe-dev.api-cloud.dirtrab.cl
      routerCanonicalHostname: router-default.apps.ocp4azu.dirtrab.cl
      routerName: default
      wildcardPolicy: None
- apiVersion: route.openshift.io/v1
  kind: Route
  metadata:
    annotations:
      openshift.io/generated-by: OpenShiftWebConsole
    creationTimestamp: "2023-05-18T20:57:11Z"
    labels:
      app: proxy001-serv-externos
      migration.openshift.io/migrated-by-migmigration: bf3b53a0-3a30-4f32-905a-b3647ad7c520
      migration.openshift.io/migrated-by-migplan: f912fe17-8056-491d-8703-6b82312d78ec
      velero.io/backup-name: migration-d9b4c-initial-qhlk8
      velero.io/restore-name: migration-d9b4c-final-gc9lr
    name: proxy001-serv-externos
    namespace: ministrosdefe-dev
    resourceVersion: "6268346"
    uid: 2d0d036b-4ce4-43a0-b2d7-5e16fe609381
  spec:
    host: proxy001-ministros-de-fe-dev.api-cloud.dirtrab.cl
    port:
      targetPort: 8080-tcp
    to:
      kind: Service
      name: proxy001-serv-externos
      weight: 100
    wildcardPolicy: None
  status:
    ingress:
    - conditions:
      - lastTransitionTime: "2023-05-18T20:57:11Z"
        status: "True"
        type: Admitted
      host: proxy001-ministros-de-fe-dev.api-cloud.dirtrab.cl
      routerCanonicalHostname: router-default.apps.ocp4azu.dirtrab.cl
      routerName: default
      wildcardPolicy: None
kind: List
metadata:
  resourceVersion: ""
  selfLink: ""
