ministrosdefe-dev/services.yaml
apiVersion: v1
items:
- apiVersion: v1
  kind: Service
  metadata:
    annotations:
      openshift.io/generated-by: OpenShiftWebConsole
    creationTimestamp: "2023-05-18T20:57:11Z"
    labels:
      app: api-integracion
      migration.openshift.io/migrated-by-migmigration: bf3b53a0-3a30-4f32-905a-b3647ad7c520
      migration.openshift.io/migrated-by-migplan: f912fe17-8056-491d-8703-6b82312d78ec
      velero.io/backup-name: migration-d9b4c-initial-qhlk8
      velero.io/restore-name: migration-d9b4c-final-gc9lr
    name: api-integracion
    namespace: ministrosdefe-dev
    resourceVersion: "6268348"
    uid: 041f31e3-fd45-4aa3-8814-2f047e09c190
  spec:
    clusterIP: 172.30.99.190
    clusterIPs:
    - 172.30.99.190
    internalTrafficPolicy: Cluster
    ipFamilies:
    - IPv4
    ipFamilyPolicy: SingleStack
    ports:
    - name: 8080-tcp
      port: 8080
      protocol: TCP
      targetPort: 8080
    selector:
      deploymentconfig: api-integracion
    sessionAffinity: None
    type: ClusterIP
  status:
    loadBalancer: {}
- apiVersion: v1
  kind: Service
  metadata:
    annotations:
      openshift.io/generated-by: OpenShiftWebConsole
    creationTimestamp: "2023-05-18T20:57:11Z"
    labels:
      app: djtrl-serv001-decl
      migration.openshift.io/migrated-by-migmigration: bf3b53a0-3a30-4f32-905a-b3647ad7c520
      migration.openshift.io/migrated-by-migplan: f912fe17-8056-491d-8703-6b82312d78ec
      velero.io/backup-name: migration-d9b4c-initial-qhlk8
      velero.io/restore-name: migration-d9b4c-final-gc9lr
    name: djtrl-serv001-decl
    namespace: ministrosdefe-dev
    resourceVersion: "6268352"
    uid: a764c737-dc9c-453b-be45-232ff17d8883
  spec:
    clusterIP: 172.30.59.110
    clusterIPs:
    - 172.30.59.110
    internalTrafficPolicy: Cluster
    ipFamilies:
    - IPv4
    ipFamilyPolicy: SingleStack
    ports:
    - name: 8080-tcp
      port: 8080
      protocol: TCP
      targetPort: 8080
    selector:
      deploymentconfig: djtrl-serv001-decl
    sessionAffinity: None
    type: ClusterIP
  status:
    loadBalancer: {}
- apiVersion: v1
  kind: Service
  metadata:
    annotations:
      openshift.io/generated-by: OpenShiftWebConsole
    creationTimestamp: "2023-05-18T20:57:11Z"
    labels:
      app: djtrl-serv002-bff
      migration.openshift.io/migrated-by-migmigration: bf3b53a0-3a30-4f32-905a-b3647ad7c520
      migration.openshift.io/migrated-by-migplan: f912fe17-8056-491d-8703-6b82312d78ec
      velero.io/backup-name: migration-d9b4c-initial-qhlk8
      velero.io/restore-name: migration-d9b4c-final-gc9lr
    name: djtrl-serv002-bff
    namespace: ministrosdefe-dev
    resourceVersion: "6268356"
    uid: bd00bb3d-e622-4703-be1b-830ff6c01878
  spec:
    clusterIP: 172.30.100.15
    clusterIPs:
    - 172.30.100.15
    internalTrafficPolicy: Cluster
    ipFamilies:
    - IPv4
    ipFamilyPolicy: SingleStack
    ports:
    - name: 8080-tcp
      port: 8080
      protocol: TCP
      targetPort: 8080
    selector:
      deploymentconfig: djtrl-serv002-bff
    sessionAffinity: None
    type: ClusterIP
  status:
    loadBalancer: {}
- apiVersion: v1
  kind: Service
  metadata:
    annotations:
      openshift.io/generated-by: OpenShiftWebConsole
    creationTimestamp: "2023-05-18T20:57:11Z"
    labels:
      app: front001-ministros-de-fe
      migration.openshift.io/migrated-by-migmigration: bf3b53a0-3a30-4f32-905a-b3647ad7c520
      migration.openshift.io/migrated-by-migplan: f912fe17-8056-491d-8703-6b82312d78ec
      velero.io/backup-name: migration-d9b4c-initial-qhlk8
      velero.io/restore-name: migration-d9b4c-final-gc9lr
    name: front001-ministros-de-fe
    namespace: ministrosdefe-dev
    resourceVersion: "6268359"
    uid: ff030919-8488-4e8f-b4dc-3352b6b1af72
  spec:
    clusterIP: 172.30.96.109
    clusterIPs:
    - 172.30.96.109
    internalTrafficPolicy: Cluster
    ipFamilies:
    - IPv4
    ipFamilyPolicy: SingleStack
    ports:
    - name: 8080-tcp
      port: 8080
      protocol: TCP
      targetPort: 8080
    selector:
      deploymentconfig: front001-ministros-de-fe
    sessionAffinity: None
    type: ClusterIP
  status:
    loadBalancer: {}
- apiVersion: v1
  kind: Service
  metadata:
    annotations:
      openshift.io/generated-by: OpenShiftWebConsole
    creationTimestamp: "2023-05-18T20:57:11Z"
    labels:
      app: proxy001-serv-externos
      migration.openshift.io/migrated-by-migmigration: bf3b53a0-3a30-4f32-905a-b3647ad7c520
      migration.openshift.io/migrated-by-migplan: f912fe17-8056-491d-8703-6b82312d78ec
      velero.io/backup-name: migration-d9b4c-initial-qhlk8
      velero.io/restore-name: migration-d9b4c-final-gc9lr
    name: proxy001-serv-externos
    namespace: ministrosdefe-dev
    resourceVersion: "6268363"
    uid: 5cebf8f1-ee21-472a-a56f-ee9732d0af46
  spec:
    clusterIP: 172.30.60.130
    clusterIPs:
    - 172.30.60.130
    internalTrafficPolicy: Cluster
    ipFamilies:
    - IPv4
    ipFamilyPolicy: SingleStack
    ports:
    - name: 8080-tcp
      port: 8080
      protocol: TCP
      targetPort: 8080
    selector:
      deploymentconfig: proxy001-serv-externos
    sessionAffinity: None
    type: ClusterIP
  status:
    loadBalancer: {}
kind: List
metadata:
  resourceVersion: ""
  selfLink: ""
